--- a/style.css
+++ b/style.css
@@ -127,15 +127,14 @@ background-color: #111;
 }
 
 .strekbottom {
-    display: flex;
-    position: absolute;
+    justify-content: center;
     background-color: #FFFFFF;
     height: 2px;
     width: 400px;
     border-radius: 54px;
-    margin-left: 35%;
-    margin-right: 35%;
-    margin-top: -5%;
+    margin-top: -90px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .highlight-text2 {
