--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ background-color: #111;
 .VLFKlogo {
     width: 224px;
     height: 55px;
-
+}
 
 .nav2 {
     display: flex;
@@ -259,5 +259,4 @@ background-color: #111;
     .active {
         display: none;
     }
-
 }
